Fixed the menu not been fully accessible on mobile

--- a/aemdesign-aem-compose/src/styleguide/scss/_navlist.scss
+++ b/aemdesign-aem-compose/src/styleguide/scss/_navlist.scss
@@ -15,9 +15,7 @@ ul.navlist {
 
   .dropdown-menu {
     background-color: transparent;
-    border-bottom-width: 0;
-    border-right-width: 0;
-    border-top-width: 0;
+    border-width: 0;
     display: block;
     float: none;
     margin-top: 0;
