--- a/aemdesign-aem-compose/src/styleguide/scss/styleguide.scss
+++ b/aemdesign-aem-compose/src/styleguide/scss/styleguide.scss
@@ -82,7 +82,7 @@ $gutter-half-width: $grid-gutter-width / 2;
   #dls-menu-controls {
     background-color: color('white');
     border-right: 1px solid color('grey-2');
-    height: 100vh;
+    height: 100%;
     left: 0;
     opacity: 0;
     overflow-y: auto;
